Added problems in LeetCode-Blind75

--- a/Python/LeetCode-Blind75/String-Easy-Valid Parentheses.ipynb
+++ b/Python/LeetCode-Blind75/String-Easy-Valid Parentheses.ipynb
@@ -4,125 +4,122 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 152. Maximum Product Subarray\n",
+    "## 20. Valid Parentheses\n",
+    "Given a string s containing just the characters '(', ')', '{', '}', '[' and ']', determine if the input string is valid.\n",
     "\n",
-    "Given an integer array nums, find a contiguous non-empty subarray within the array that has the largest product, and return the product.\n",
+    "An input string is valid if:\n",
     "\n",
-    "The test cases are generated so that the answer will fit in a 32-bit integer.\n",
+    "Open brackets must be closed by the same type of brackets.\n",
     "\n",
-    "A subarray is a contiguous subsequence of the array.\n",
+    "Open brackets must be closed in the correct order.\n",
     "\n",
+    "Every close bracket has a corresponding open bracket of the same type.\n",
     " \n",
     "\n",
     "Example 1:\n",
     "\n",
-    "Input: nums = [2,3,-2,4]\n",
+    "Input: s = \"()\"\n",
     "\n",
-    "Output: 6\n",
-    "\n",
-    "Explanation: [2,3] has the largest product 6.\n",
+    "Output: true\n",
     "\n",
     "Example 2:\n",
     "\n",
-    "Input: nums = [-2,0,-1]\n",
+    "Input: s = \"()[]{}\"\n",
     "\n",
-    "Output: 0\n",
+    "Output: true\n",
     "\n",
-    "Explanation: The result cannot be 2, because [-2,-1] is not a subarray.\n",
+    "Example 3:\n",
+    "\n",
+    "Input: s = \"(]\"\n",
+    "\n",
+    "Output: false\n",
     " \n",
     "\n",
     "Constraints:\n",
     "\n",
-    "1 <= nums.length <= 2 * 104\n",
+    "1 <= s.length <= 104\n",
     "\n",
-    "-10 <= nums[i] <= 10\n",
-    "\n",
-    "The product of any prefix or suffix of nums is guaranteed to fit in a 32-bit integer."
+    "s consists of parentheses only '()[]{}'."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def maxProduct(nums):\n",
-    "    \n",
-    "    mp = float(\"-inf\")\n",
-    "    max_p = 1\n",
-    "    min_p = 1\n",
-    "    \n",
-    "    for n in nums:\n",
-    "        if n < 0:\n",
-    "            max_p, min_p = min_p, max_p\n",
-    "        max_p = max(max_p*n, n)\n",
-    "        min_p = min(min_p *n, n)\n",
-    "        mp = max(max_p, mp)\n",
-    "    return mp\n",
-    "        "
+    "def isValid(s):\n",
+    "        \n",
+    "    temp = { \"]\" : \"[\", \")\": \"(\", \"}\" : \"{\" }\n",
+    "    stack = []\n",
+    "    for e in s:\n",
+    "        if e not in temp:\n",
+    "            stack.append(e)\n",
+    "        else:\n",
+    "            if len(stack) == 0 or stack.pop() != temp[e]:\n",
+    "                return False\n",
+    "\n",
+    "    return len(stack) == 0     "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "6"
+       "False"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums = [2,3,-2,4]\n",
-    "maxProduct(nums)"
+    "isValid(\")\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "24"
+       "True"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums = [-2,3,-4]\n",
-    "maxProduct(nums)"
+    "isValid(\"(({{[]}}))\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "True"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums = [-2,0,-1]\n",
-    "maxProduct(nums)"
+    "isValid(\"(){[]}{{}}({})[{}()]\")"
    ]
   },
   {
