--- a/Python/LeetCode-Blind75/String-Medium-Palindromic Substrings.ipynb
+++ b/Python/LeetCode-Blind75/String-Medium-Palindromic Substrings.ipynb
@@ -4,42 +4,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 70. Climbing Stairs\n",
-    "You are climbing a staircase. It takes n steps to reach the top.\n",
+    "## 647. Palindromic Substrings\n",
+    "Given a string s, return the number of palindromic substrings in it.\n",
     "\n",
-    "Each time you can either climb 1 or 2 steps. In how many distinct ways can you climb to the top?\n",
+    "A string is a palindrome when it reads the same backward as forward.\n",
     "\n",
-    " \n",
+    "A substring is a contiguous sequence of characters within the string.\n",
     "\n",
     "Example 1:\n",
     "\n",
-    "Input: n = 2\n",
-    "\n",
-    "Output: 2\n",
-    "\n",
-    "Explanation: There are two ways to climb to the top.\n",
-    "1. 1 step + 1 step\n",
-    "\n",
-    "2. 2 steps\n",
-    "\n",
-    "Example 2:\n",
-    "\n",
-    "Input: n = 3\n",
+    "Input: s = \"abc\"\n",
     "\n",
     "Output: 3\n",
     "\n",
-    "Explanation: There are three ways to climb to the top.\n",
+    "Explanation: Three palindromic strings: \"a\", \"b\", \"c\".\n",
     "\n",
-    "1. 1 step + 1 step + 1 step\n",
+    "Example 2:\n",
     "\n",
-    "2. 1 step + 2 steps\n",
+    "Input: s = \"aaa\"\n",
     "\n",
-    "3. 2 steps + 1 step\n",
+    "Output: 6\n",
+    "\n",
+    "Explanation: Six palindromic strings: \"a\", \"a\", \"a\", \"aa\", \"aa\", \"aaa\".\n",
     " \n",
     "\n",
     "Constraints:\n",
     "\n",
-    "1 <= n <= 45"
+    "1 <= s.length <= 1000\n",
+    "\n",
+    "s consists of lowercase English letters."
    ]
   },
   {
@@ -48,17 +41,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def numberOfWayClimbOnTop(n):\n",
-    "    if n == 1:\n",
-    "        return 1\n",
-    "    dp = [0]*n\n",
-    "    dp[0] = 1\n",
-    "    dp[1] = 2\n",
-    "    \n",
-    "    for i in range(2,n):\n",
-    "        dp[i] = dp[i-1] + dp[i-2]\n",
-    "    return dp[-1]\n",
-    "        "
+    "def numberOfPlanidromic(s):\n",
+    "    n = len(s)\n",
+    "    count = 0\n",
+    "    for i in range(n):\n",
+    "        count += getPalindromic(s, i, i) # Odd number of letters in string\n",
+    "        count += getPalindromic(s, i, i+1) # even number of letters in string\n",
+    "    return count\n",
+    "\n",
+    "def getPalindromic(s, left, right):\n",
+    "    count = 0\n",
+    "    while left>= 0 and right < len(s) and s[left] == s[right]:\n",
+    "        count += 1\n",
+    "        left -=1\n",
+    "        right += 1\n",
+    "    return count"
    ]
   },
   {
@@ -69,7 +66,7 @@
     {
      "data": {
       "text/plain": [
-       "2"
+       "6"
       ]
      },
      "execution_count": 2,
@@ -78,8 +75,7 @@
     }
    ],
    "source": [
-    "n = 2\n",
-    "numberOfWayClimbOnTop(n)"
+    "numberOfPlanidromic(\"aaa\")"
    ]
   },
   {
@@ -99,29 +95,25 @@
     }
    ],
    "source": [
-    "n = 3\n",
-    "numberOfWayClimbOnTop(n)"
+    "numberOfPlanidromic(\"abc\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n = 4\n",
-    "numberOfWayClimbOnTop(n)"
+    "def numberOfPlanidromic_dp(s):\n",
+    "    n = len(s)\n",
+    "    \n",
+    "    dp = [[0]*n for _ in range(n)]\n",
+    "    count = 0\n",
+    "    for i in range(n-1, -1, -1):\n",
+    "        for j in range(i, n):\n",
+    "            dp[i][j] = s[i]==s[j] and (j-i+1 < 3 or dp[i+1][j-1])\n",
+    "            count += dp[i][j]\n",
+    "    return count"
    ]
   },
   {
@@ -132,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "13"
+       "6"
       ]
      },
      "execution_count": 5,
@@ -141,8 +133,27 @@
     }
    ],
    "source": [
-    "n = 6\n",
-    "numberOfWayClimbOnTop(n)"
+    "numberOfPlanidromic_dp(\"aaa\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "numberOfPlanidromic_dp(\"abc\")"
    ]
   },
   {
