--- a/Python/LeetCode-Blind75/String-Easy-Valid Anagram.ipynb
+++ b/Python/LeetCode-Blind75/String-Easy-Valid Anagram.ipynb
@@ -4,75 +4,63 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 217. Contains Duplicate\n",
+    "## 242. Valid Anagram\n",
+    "Given two strings s and t, return true if t is an anagram of s, and false otherwise.\n",
     "\n",
-    "Given an integer array nums, return true if any value appears at least twice in the array, and return false if every element is distinct.\n",
+    "An Anagram is a word or phrase formed by rearranging the letters of a different word or phrase, typically using all the original letters exactly once.\n",
+    "\n",
+    " \n",
     "\n",
     "Example 1:\n",
     "\n",
-    "Input: nums = [1,2,3,1]\n",
+    "Input: s = \"anagram\", t = \"nagaram\"\n",
     "\n",
     "Output: true\n",
     "\n",
     "Example 2:\n",
     "\n",
-    "Input: nums = [1,2,3,4]\n",
+    "Input: s = \"rat\", t = \"car\"\n",
     "\n",
     "Output: false\n",
-    "\n",
-    "Example 3:\n",
-    "\n",
-    "Input: nums = [1,1,1,3,3,4,3,2,4,2]\n",
-    "\n",
-    "Output: true\n",
     " \n",
     "\n",
     "Constraints:\n",
     "\n",
-    "1 <= nums.length <= 105\n",
+    "1 <= s.length, t.length <= 5 * 104\n",
     "\n",
-    "-109 <= nums[i] <= 109"
+    "s and t consist of lowercase English letters."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def containsDuplicate(nums):\n",
+    "def isAnagram(s, t):\n",
+    "    if len(s) != len(t):\n",
+    "        return False\n",
+    "\n",
     "    temp = {}\n",
-    "    for n in nums:\n",
-    "        if n in temp:\n",
-    "            return True\n",
-    "        temp[n] = True\n",
-    "    return False"
+    "    for e in t:\n",
+    "        temp[e] = temp.get(e, 0) + 1\n",
+    "    charachters = len(temp)\n",
+    "    right = 0\n",
+    "    while right < len(s):\n",
+    "        e = s[right]\n",
+    "        if e not in temp:\n",
+    "            return False\n",
+    "        else:\n",
+    "            temp[e] -= 1\n",
+    "            if temp[e] == 0:\n",
+    "                charachters -= 1\n",
+    "        right += 1\n",
+    "    return charachters == 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "nums = [1,2,3,1]\n",
-    "containsDuplicate(nums)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -81,19 +69,18 @@
        "False"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums = [1,2,3,4]\n",
-    "containsDuplicate(nums)"
+    "isAnagram(\"ccaa\", \"accc\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -102,15 +89,21 @@
        "True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "nums = [1,1,1,3,3,4,3,2,4,2]\n",
-    "containsDuplicate(nums)"
+    "isAnagram(\"abcd\", \"bcda\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
