Added more problems

--- a/Python/problems/DiskStacking.ipynb
+++ b/Python/problems/DiskStacking.ipynb
@@ -251,6 +251,104 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Using back tracking O(n^2)\n",
+    "class Stacking:\n",
+    "    def __init__(self, sumHeight, maxHeight):\n",
+    "        self.sumHeight = sumHeight\n",
+    "        self.maxHeight = maxHeight\n",
+    "        self.result = []\n",
+    "def disStacking_bt(disks):\n",
+    "    disks.sort(key = lambda disk:disk[2])\n",
+    "    temp = []\n",
+    "    stack = Stacking(0, float(\"-inf\"))\n",
+    "    helper(disks, temp, 0, stack)\n",
+    "    return stack.result\n",
+    "\n",
+    "def helper(disks, temp, index, stack):\n",
+    "    m = len(temp)\n",
+    "    if m > 0:\n",
+    "        stack.sumHeight += temp[-1][2]\n",
+    "        if stack.maxHeight < stack.sumHeight:\n",
+    "            stack.maxHeight = stack.sumHeight\n",
+    "            stack.result = temp[:]\n",
+    "    for i in range(index, len(disks)):\n",
+    "        if i > 0 and len(temp)>0:\n",
+    "            if temp[-1][0] >= disks[i][0]or temp[-1][1] >= disks[i][1] or temp[-1][2]>= disks[i][2]:\n",
+    "                continue\n",
+    "        temp.append(disks[i])\n",
+    "        helper(disks, temp, i+1, stack)\n",
+    "        stack.sumHeight -= temp.pop()[2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 4], [2, 2, 8]]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "disks = [[2, 1, 2],[3, 2, 3],[2, 2, 8],[2, 3, 4],[1, 2, 1],[4, 4, 5],[1, 1, 4]]\n",
+    "disStacking_bt(disks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 1, 4], [2, 2, 8]]"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "disks = [[2, 1, 2],[3, 2, 3],[2, 2, 8],[2, 3, 4],[1, 2, 1],[4, 4, 5],[1, 1, 4]]\n",
+    "disStacking_bt(disks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[2, 1, 2], [3, 2, 3], [4, 4, 5]]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "disks = [[2, 1, 2],[3, 2, 3],[2, 2, 8],[2, 3, 4],[1, 3, 1],[4, 4, 5]]\n",
+    "disStacking_bt(disks)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
