--- a/Python/problems/Fibonacci.ipynb
+++ b/Python/problems/Fibonacci.ipynb
@@ -2,16 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def fib(n):\n",
     "    a=0\n",
     "    b = 1\n",
-    "    if n <=1:\n",
+    "    if n == 0:\n",
     "        return a\n",
-    "    c = 3\n",
+    "    if n == 1:\n",
+    "        return b\n",
+    "    c = 2\n",
     "    while c<=n:\n",
     "        a, b = b, a+b\n",
     "        c += 1\n",
@@ -21,30 +23,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1"
+       "13"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "fib(2)"
+    "fib(7)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Recursive way with memoization\n",
+    "def fib1(n, cache = None):\n",
+    "    if cache == None:\n",
+    "        cache = {}\n",
+    "    if n in cache:\n",
+    "        return cache[n]\n",
+    "    \n",
+    "    if n == 0 or n == 1:\n",
+    "        return n\n",
+    "    \n",
+    "    result = fib1(n-1, cache) + fib1(n-2, cache)\n",
+    "    cache[n] = result\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "139423224561697880139724382870407283950070256587697307264108962948325571622863290691557658876222521294125"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fib1(500)"
+   ]
   }
  ],
  "metadata": {
