--- a/Python/problems/FourSum.ipynb
+++ b/Python/problems/FourSum.ipynb
@@ -24,18 +24,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# O(n^3) time complexity, but in reality it is O(nlogn) for sorting + O(n^3)\n",
     "# O(1) space complexity\n",
-    "def fourSum(a, sum):\n",
+    "def fourSum(a, target):\n",
     "    result = set()\n",
     "    a.sort()\n",
     "    for i in range(len(a)-3):\n",
     "        for j in range(i+ 1, len(a)-2):\n",
-    "            s = sum - (a[i] + a[j])\n",
+    "            s = target - (a[i] + a[j])\n",
     "            \n",
     "            left = j + 1\n",
     "            right = len(a)-1\n",
@@ -54,38 +54,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{(-2, -1, 1, 2), (-1, 0, 0, 1), (-2, 0, 0, 2)}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = [1,0,-1,0,-2,2]\n",
-    "sum = 0\n",
-    "print(fourSum(a, sum))"
+    "target = 0\n",
+    "print(fourSum(a, target))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# average: O(n^2) time complexity\n",
     "#Worst case: O(n^3)\n",
     "# O(n^2) space complexity\n",
-    "def FourSum(a, sum):\n",
+    "def FourSum(a, target):\n",
     "    pairs = {}\n",
     "    result = []\n",
     "    for i in range (1, len(a) - 1):\n",
     "        for j in range(i+1, len(a)):\n",
-    "            n = sum - a[i] - a[j]\n",
+    "            n = target - a[i] - a[j]\n",
     "            if n in pairs:\n",
     "                for pair in pairs[n]:\n",
     "                    result.append(pair + [a[i], a[j]])\n",
@@ -102,40 +94,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[1, 0, -1, 0], [1, -1, -2, 2], [0, 0, -2, 2]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = [1,0,-1,0,-2,2]\n",
-    "sum = 0\n",
-    "print(FourSum(a, sum))"
+    "target = 0\n",
+    "print(FourSum(a, target))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = [7,6,4,-1,1,2]\n",
+    "target = 16\n",
+    "print(FourSum(a, target))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Sliding window O(n) complexity\n",
+    "\n",
+    "def fourSum_sw(array, target):\n",
+    "    total_numbers = 4\n",
+    "    n = len(array)\n",
+    "    k = n - total_numbers\n",
+    "    totalSum = sum(array)\n",
+    "    currentSum = 0\n",
+    "    windowSum = 0\n",
+    "    result = []\n",
+    "    for j in range(k):\n",
+    "        windowSum = windowSum + array[j]\n",
+    "        \n",
+    "    currentSum =  totalSum - windowSum\n",
+    "    if currentSum == target:\n",
+    "        result.append(array[j+1:])\n",
+    "    j = k\n",
+    "    l = 0\n",
+    "    while j < n:\n",
+    "        currentSum += array[l]\n",
+    "        currentSum -= array[j]\n",
+    "        l += 1\n",
+    "        if currentSum == target:\n",
+    "            result.append(array[0:l] + array[j+1:])\n",
+    "        j += 1\n",
+    "    return result\n",
+    "        \n",
+    "\n",
+    "        \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[7, 6, 4, -1], [7, 6, 1, 2]]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[[7, 6, 1, 2], [7, 6, 4, -1]]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "a = [7,6,4,-1,1,2]\n",
-    "sum = 16\n",
-    "print(FourSum(a, sum))"
+    "array = [7,6,4,-1,1,2]\n",
+    "target = 16\n",
+    "fourSum_sw(array, target)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[1, 0, -1, 0]]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = [1,0,-1,0,-2,2]\n",
+    "target = 0\n",
+    "fourSum_sw(a, target)"
    ]
   },
   {
