--- a/Python/problems/LongestPalindromicSubString.ipynb
+++ b/Python/problems/LongestPalindromicSubString.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem\n",
+    "## Problem Leet Code 5\n",
     "\n",
     "Find longest palindromic sub string from given string. Note, single character is also be considered as palindrome. Assume that there would be only one palindrome in a given string.\n",
     "\n",
