--- a/Python/problems/MaximumSumSubmatrix.ipynb
+++ b/Python/problems/MaximumSumSubmatrix.ipynb
@@ -151,6 +151,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def matrixSumSubMatrix_try(matrix, size):\n",
+    "    if size > len(matrix):\n",
+    "        return 0\n",
+    "    matrixSum = sumMatrix(matrix)\n",
+    "    maxSum = float(\"-inf\")\n",
+    "    \n",
+    "    for i in range(size-1, len(matrix)):\n",
+    "        for j in range(size-1, len(matrix[i])):\n",
+    "            currentSum = matrixSum[i][j]  \n",
+    "\n",
+    "            atLeft = j-size < 0\n",
+    "            atTop = i - size < 0\n",
+    "\n",
+    "            if not atLeft:\n",
+    "                currentSum -= matrixSum[i][j-size]\n",
+    "            if not atTop:\n",
+    "                currentSum -= matrixSum[i-size][j]\n",
+    "\n",
+    "            atBoundry = atLeft or atTop\n",
+    "\n",
+    "            if not atBoundry:\n",
+    "                currentSum += matrixSum[i-size][j-size]\n",
+    "\n",
+    "            if maxSum < currentSum:\n",
+    "                maxSum = currentSum\n",
+    "    return maxSum\n",
+    "    \n",
+    "def sumMatrix(matrix):\n",
+    "    summatrix = [[0 for _ in range(len(matrix[r]))] for r in range(len(matrix)) ]\n",
+    "    summatrix[0][0] = matrix[0][0]\n",
+    "    for row in range(1, len(matrix)):\n",
+    "        summatrix[row][0] = summatrix[row-1][0] + matrix[row][0]\n",
+    "    for col in range(1, len(matrix[0])):\n",
+    "        summatrix[0][col] = summatrix[0][col-1] + matrix[0][col]\n",
+    "        \n",
+    "    for i in range(1, len(matrix)):\n",
+    "        for j in range(1, len(matrix[i])):\n",
+    "            summatrix[i][j] = matrix[i][j] + summatrix[i-1][j] + summatrix[i][j-1] - summatrix[i-1][j-1]\n",
+    "            \n",
+    "    return summatrix\n",
+    "                 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "28"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "matrix =  [\n",
+    "    [3, -4, 6, -5, 1],\n",
+    "    [1, -2, 8, -4, -2],\n",
+    "    [3, -8, 9, 3, 1],\n",
+    "    [-7, 3, 4, 2, 7],\n",
+    "    [-3, 7, -5, 7, -6]\n",
+    "  ]\n",
+    "size = 3\n",
+    "matrixSumSubMatrix_try(matrix, size)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
