--- a/Python/problems/ReverseWordsInString.ipynb
+++ b/Python/problems/ReverseWordsInString.ipynb
@@ -67,10 +67,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def reverseWordInString1(string):\n",
+    "    if len(string) == 0:\n",
+    "        return string\n",
+    "    \n",
+    "    words = []\n",
+    "    words\n",
+    "    sId = 0\n",
+    "    for i, ch in enumerate(string):\n",
+    "        if ch == \" \":\n",
+    "            words.append(string[sId:i])\n",
+    "            sId = i\n",
+    "        elif string[sId]== \" \":\n",
+    "            words.append(\" \")\n",
+    "            sId = i\n",
+    "    words.append(string[sId:])\n",
+    "    print(words)\n",
+    "    reverseList(words)\n",
+    "    return \"\".join(words)\n",
+    "def reverseList(words):\n",
+    "    left = 0\n",
+    "    right = len(words)-1\n",
+    "    \n",
+    "    while left<right:\n",
+    "        words[left], words[right] = words[right], words[left]\n",
+    "        left += 1\n",
+    "        right -= 1\n",
+    "\n",
+    "    \n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' algo', ' is', ' the', ' best!', ' ', ' ', ' ', ' ']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'     best! the is algo'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"algo is the best!    \"\n",
+    "reverseWordInString1(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' algo', ' is', ' the', ' best!']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "' best! the is algo'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"algo is the best!\"\n",
+    "reverseWordInString1(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['algo', ' ', 'is', ' ', 'the', ' ', 'best!']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'best! the is algo'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"algo is the best!\"\n",
+    "reverseWordInString1(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['algo', ' ', 'is', ' ', 'the', ' ', 'best!', ' ', ' ', ' ', ' ']\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'    best! the is algo'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"algo is the best!    \"\n",
+    "reverseWordInString1(string)"
+   ]
   },
   {
    "cell_type": "code",
