--- a/Python/problems/two-sum-sortedarray.ipynb
+++ b/Python/problems/two-sum-sortedarray.ipynb
@@ -32,6 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# O(n) | O(1) space\n",
     "def twoSum(numbers, target):\n",
     "        t = len(numbers)-1\n",
     "        i = 0\n",
