--- a/Python/problems/two-sum.ipynb
+++ b/Python/problems/two-sum.ipynb
@@ -27,6 +27,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# O(n) | O(n) space\n",
     "def twoSum(nums, target):\n",
     "    dict ={}\n",
     "    for i in range(len(nums)):\n",
