--- a/Python/problems/DP-CountSubsetWithGivenSum.ipynb
+++ b/Python/problems/DP-CountSubsetWithGivenSum.ipynb
@@ -16,13 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "def countSubsetWithGivenSum(array, target):\n",
     "    dp = [[0 for i in range(target+1)]for x in range(len(array) + 1)]\n",
     "    dp[0][0] = 1\n",
+    "    sequences = []\n",
     "    \n",
     "    for i in range(1, len(array) +1):\n",
     "        num = array[i-1]\n",
@@ -31,6 +32,8 @@
     "                dp[i][j] = dp[i-1][j]\n",
     "            else:\n",
     "                dp[i][j] = dp[i-1][j] + dp[i-1][j-num]\n",
+    "               \n",
+    " \n",
     "    return dp[-1][-1]\n",
     "\n",
     "    "
@@ -38,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -47,7 +50,7 @@
        "3"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -60,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -69,7 +72,7 @@
        "1"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +94,7 @@
        "1"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +116,7 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
