--- a/Python/problems/MaxSumIncreasingSubSequence.ipynb
+++ b/Python/problems/MaxSumIncreasingSubSequence.ipynb
@@ -68,6 +68,83 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## By using Back tracking\n",
+    "class currentSum:\n",
+    "    def __init__(self, value, maxsum):\n",
+    "        self.value = value\n",
+    "        self.maxSum = maxsum\n",
+    "        self.result = []\n",
+    "def maxSumIncreasingSubSequnce_bt(array):\n",
+    "    temp = []\n",
+    "    cs= currentSum(0, float(\"-inf\"))\n",
+    "    helper(array, temp, cs, 0)\n",
+    "    return [cs.maxSum, cs.result]\n",
+    "\n",
+    "def helper(array,temp, cs, index):\n",
+    "    \n",
+    "    m = len(temp)\n",
+    "    if m > 0:\n",
+    "        cs.value += temp[m-1]\n",
+    "        if cs.maxSum < cs.value:\n",
+    "            cs.maxSum = cs.value\n",
+    "            cs.result = temp[:]\n",
+    "    \n",
+    "    for i in range(index, len(array)):\n",
+    "        if i> 0 and temp and temp[-1] >= array[i]:\n",
+    "            continue\n",
+    "        temp.append(array[i])\n",
+    "        helper(array,temp, cs, i+1)\n",
+    "        cs.value -= temp.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[110, [10, 20, 30, 50]]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [10,70,20,30,50,11,30]\n",
+    "maxSumIncreasingSubSequnce_bt(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[14, [2, 3, 4, 5]]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [2,3,8,4,1,5,4]\n",
+    "maxSumIncreasingSubSequnce_bt(array)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
