--- a/Python/BackTracking/Combinations.ipynb
+++ b/Python/BackTracking/Combinations.ipynb
@@ -4,50 +4,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Problem: 1304. Find N Unique Integers Sum up to Zero\n",
-    "https://leetcode.com/problems/find-n-unique-integers-sum-up-to-zero/description/\n",
+    "## Leet Code: 77\n",
     "\n",
-    "Given an integer n, return any array containing n unique integers such that they add up to 0.\n",
+    "Given two integers n and k, return all possible combinations of k numbers out of the range [1, n].\n",
+    "\n",
+    "You may return the answer in any order.\n",
     "\n",
     " \n",
     "\n",
     "Example 1:\n",
     "\n",
-    "Input: n = 5\n",
-    "Output: [-7,-1,1,3,4]\n",
+    "Input: n = 4, k = 2\n",
     "\n",
-    "Explanation: These arrays also are accepted [-5,-1,1,2,3] , [-3,-1,2,-2,4].\n",
+    "Output:\n",
+    "[\n",
+    "  [2,4],\n",
+    "  [3,4],\n",
+    "  [2,3],\n",
+    "  [1,2],\n",
+    "  [1,3],\n",
+    "  [1,4],\n",
+    "]\n",
     "\n",
     "Example 2:\n",
     "\n",
-    "Input: n = 3\n",
+    "Input: n = 1, k = 1\n",
     "\n",
-    "Output: [-1,0,1]\n",
-    "\n",
-    "Example 3:\n",
-    "\n",
-    "Input: n = 1\n",
-    "\n",
-    "Output: [0]\n",
+    "Output: [[1]]\n",
     " \n",
     "\n",
     "Constraints:\n",
     "\n",
-    "1 <= n <= 1000"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Approach : \n",
-    "n = 5 output: [-4,-2,0,2,-4]\n",
+    "1 <= n <= 20\n",
     "\n",
-    "n = 6 output: [-5,-3,-1,1,3,5]\n",
-    "\n",
-    "n = 3 output: [-2,0,2]\n",
-    "\n",
-    "Basically, will start from 1-n and increase by 2 for each iteration."
+    "1 <= k <= n\n"
    ]
   },
   {
@@ -56,11 +46,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def sumZero(n):\n",
-    "    out = []\n",
-    "    for i in range(1-n,n,2):\n",
-    "        out.append(i)\n",
-    "    return out"
+    "def combination(n,k):\n",
+    "    res = []\n",
+    "    temp = []\n",
+    "    helper(n,k,temp, res, 1)\n",
+    "    return res\n",
+    "\n",
+    "def helper(n,k,temp, res,index):\n",
+    "    if len(temp)==k:\n",
+    "        res.append(temp[:])\n",
+    "        return\n",
+    "    \n",
+    "    for i in range(index, n+1):\n",
+    "        temp.append(i)\n",
+    "        helper(n,k,temp,res,i+1)\n",
+    "        temp.pop()\n",
+    "        \n",
+    "        "
    ]
   },
   {
@@ -71,7 +73,7 @@
     {
      "data": {
       "text/plain": [
-       "[-4, -2, 0, 2, 4]"
+       "[[1, 2], [1, 3], [1, 4], [2, 3], [2, 4], [3, 4]]"
       ]
      },
      "execution_count": 4,
@@ -80,7 +82,9 @@
     }
    ],
    "source": [
-    "sumZero(5)"
+    "n = 4\n",
+    "k = 2\n",
+    "combination(n,k)"
    ]
   },
   {
@@ -91,7 +95,7 @@
     {
      "data": {
       "text/plain": [
-       "[-5, -3, -1, 1, 3, 5]"
+       "[[1]]"
       ]
      },
      "execution_count": 5,
@@ -100,7 +104,9 @@
     }
    ],
    "source": [
-    "sumZero(6)"
+    "n = 1\n",
+    "k = 1\n",
+    "combination(n,k)"
    ]
   },
   {
@@ -111,7 +117,7 @@
     {
      "data": {
       "text/plain": [
-       "[-2, 0, 2]"
+       "[[1, 2]]"
       ]
      },
      "execution_count": 6,
@@ -120,7 +126,9 @@
     }
    ],
    "source": [
-    "sumZero(3)"
+    "n = 2\n",
+    "k = 2\n",
+    "combination(n,k)"
    ]
   },
   {
