Added problems belonging to Binary Search

--- a/Python/BinarySearchTree/BinarySearchTree_Delete.ipynb
+++ b/Python/BinarySearchTree/BinarySearchTree_Delete.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,6 +105,65 @@
     "            else:\n",
     "                parent._right = None\n",
     "            tmp1 = None\n",
+    "            \n",
+    "    \n",
+    "    # Delete a node for given data from BST\n",
+    "    def removeElement(self, data):\n",
+    "        if self._root is None:\n",
+    "            raise Empty(\"Tree is Empty\")\n",
+    "        # Move to the right, if the data is less than root's data\n",
+    "        tmp = self._root\n",
+    "        parent = None\n",
+    "        \n",
+    "        while (tmp):\n",
+    "            print(\"data : \", data)\n",
+    "            print(\"tmp data : \", tmp._data)\n",
+    "            if data < tmp._data:\n",
+    "                parent = tmp\n",
+    "                tmp = tmp._left\n",
+    "            elif data > tmp._data:\n",
+    "                parent = tmp\n",
+    "                tmp = tmp._right\n",
+    "            else:\n",
+    "                break\n",
+    "        if tmp is None:\n",
+    "            print(\"Given data is not available in the tree\")\n",
+    "            return\n",
+    "        \n",
+    "        # node with only right child\n",
+    "        if tmp._left is None:\n",
+    "            if parent._left is not None and parent._left == tmp:\n",
+    "                parent._left = tmp._right\n",
+    "            else:\n",
+    "                parent._right = tmp._right\n",
+    "            tmp = None\n",
+    "            return\n",
+    "            \n",
+    "        \n",
+    "        # node with only left child\n",
+    "        elif tmp._right is None:\n",
+    "            if parent._left is not None and parent._left == tmp:\n",
+    "                parent._left = tmp._left\n",
+    "            else:\n",
+    "                parent._right = tmp._left\n",
+    "            tmp = None\n",
+    "            return\n",
+    "        \n",
+    "        # node having two children\n",
+    "        else:\n",
+    "            # Get the node having smallest value in the right side of node\n",
+    "            right = tmp._right\n",
+    "            \n",
+    "            while (right._left):\n",
+    "                right = right._left    \n",
+    "            \n",
+    "            print(\"\\nin else condition\\n\")\n",
+    "            print(\"tmp._data : \", tmp._data)\n",
+    "            print(\"right._data : \", right._data)\n",
+    "            tmp._data, right._data = right._data, tmp._data\n",
+    "            print(\"\\nRecursion started\\n\")\n",
+    "            print(\"\\n data pass : \", right._data)\n",
+    "            self.removeElement(right._data)\n",
     "            \n",
     "     # Traversals   \n",
     "        \n",
@@ -245,6 +304,248 @@
    "source": [
     "# Remove node having data 3. It has no children\n",
     "b.deleteElement(3)\n",
+    "print(\"*****Preorder Traversal******\")\n",
+    "b.preorder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b = BST()\n",
+    "b.insert(7)\n",
+    "b.insert(8)\n",
+    "b.insert(9)\n",
+    "b.insert(4)\n",
+    "b.insert(6)\n",
+    "b.insert(5)\n",
+    "b.insert(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****Preorder Traversal******\n",
+      "7\n",
+      "4\n",
+      "3\n",
+      "6\n",
+      "5\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove node having data 8. It has only right child\n",
+    "b.removeElement(8)\n",
+    "print(\"*****Preorder Traversal******\")\n",
+    "b.preorder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****Preorder Traversal******\n",
+      "7\n",
+      "5\n",
+      "3\n",
+      "6\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove node having data 4. It has two children\n",
+    "b.deleteElement(4)\n",
+    "print(\"*****Preorder Traversal******\")\n",
+    "b.preorder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****Preorder Traversal******\n",
+      "10\n",
+      "5\n",
+      "2\n",
+      "1\n",
+      "15\n",
+      "13\n",
+      "12\n",
+      "14\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = BST()\n",
+    "b.insert(10)\n",
+    "b.insert(5)\n",
+    "b.insert(15)\n",
+    "b.insert(22)\n",
+    "b.insert(13)\n",
+    "b.insert(12)\n",
+    "b.insert(14)\n",
+    "b.insert(2)\n",
+    "b.insert(1)\n",
+    "print(\"*****Preorder Traversal******\")\n",
+    "b.preorder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****Preorder Traversal******\n",
+      "12\n",
+      "5\n",
+      "2\n",
+      "1\n",
+      "15\n",
+      "13\n",
+      "14\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "b.deleteElement(10)\n",
+    "print(\"*****Preorder Traversal******\")\n",
+    "b.preorder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****Preorder Traversal******\n",
+      "10\n",
+      "5\n",
+      "2\n",
+      "1\n",
+      "17\n",
+      "16\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = BST()\n",
+    "b.insert(10)\n",
+    "b.insert(5)\n",
+    "b.insert(17)\n",
+    "b.insert(22)\n",
+    "b.insert(16)\n",
+    "b.insert(13)\n",
+    "b.insert(14)\n",
+    "b.insert(15)\n",
+    "b.insert(2)\n",
+    "b.insert(1)\n",
+    "print(\"*****Preorder Traversal******\")\n",
+    "b.preorder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "data :  10\n",
+      "tmp data :  10\n",
+      "\n",
+      "in else condition\n",
+      "\n",
+      "tmp._data :  10\n",
+      "right._data :  13\n",
+      "\n",
+      "Recursion started\n",
+      "\n",
+      "\n",
+      " data pass :  10\n",
+      "data :  10\n",
+      "tmp data :  13\n",
+      "data :  10\n",
+      "tmp data :  5\n",
+      "Given data is not available in the tree\n",
+      "*****Preorder Traversal******\n",
+      "13\n",
+      "5\n",
+      "2\n",
+      "1\n",
+      "17\n",
+      "16\n",
+      "10\n",
+      "14\n",
+      "15\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "b.removeElement(10)\n",
+    "print(\"*****Preorder Traversal******\")\n",
+    "b.preorder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*****Preorder Traversal******\n",
+      "13\n",
+      "5\n",
+      "2\n",
+      "1\n",
+      "17\n",
+      "16\n",
+      "22\n"
+     ]
+    }
+   ],
+   "source": [
+    "b.deleteElement(10)\n",
     "print(\"*****Preorder Traversal******\")\n",
     "b.preorder()"
    ]
