--- a/Python/BinarySearchTree/BinarySearchTree.ipynb
+++ b/Python/BinarySearchTree/BinarySearchTree.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Exception class\n",
     "class Empty(Exception):\n",
     "    pass"
    ]
