Added problems belonging to Sliding Window

--- a/Python/SlidingWindow/First negative number in window of size k.ipynb
+++ b/Python/SlidingWindow/First negative number in window of size k.ipynb
@@ -16,13 +16,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import deque\n",
     "def firstNegativeNumber(array, k):\n",
     "    # Create window of size k and store negative number in the auxiliary array\n",
-    "    temp = []\n",
+    "    temp = deque([])\n",
     "    # Output\n",
     "    result = []\n",
     "    # Moving j to setting up window of size k. Also storing negative value in temp\n",
@@ -43,7 +44,7 @@
     "            result.append(0)\n",
     "        # As ith element is getting out from windows, so take it out from temp also.\n",
     "        if array[i]<0:\n",
-    "            temp.pop(0)\n",
+    "            temp.popleft()\n",
     "        \n",
     "        i += 1\n",
     "        j += 1\n",
@@ -61,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +71,7 @@
        "[-1, -1, -7, -15, -15, 0]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -83,12 +84,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
+    "from collections import deque\n",
     "def firstNegativeNum(array, k):\n",
-    "    temp = []\n",
+    "    temp = deque([])\n",
     "    for right in range(k):\n",
     "        if array[right]<0:\n",
     "            temp.append(array[right])\n",
@@ -104,7 +106,7 @@
     "    \n",
     "    while right<len(array):\n",
     "        if array[left] < 0:\n",
-    "            temp.pop(0)\n",
+    "            temp.popleft()\n",
     "        if array[right] < 0:\n",
     "            temp.append(array[right])\n",
     "            \n",
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -130,7 +132,7 @@
        "[-1, -1, -7, -15, -15, 0]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
