--- a/Python/SlidingWindow/Count of occurrence of anagram in a string.ipynb
+++ b/Python/SlidingWindow/Count of occurrence of anagram in a string.ipynb
@@ -106,6 +106,64 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Optimized\n",
+    "def occurenceOfAnagram1(string, pattern):\n",
+    "    temp = {}\n",
+    "    for c in pattern:\n",
+    "        temp[c] = temp.get(c, 0)+1\n",
+    "    count = 0\n",
+    "    left = 0\n",
+    "    right  = 0\n",
+    "    uniqueChar = len(temp)\n",
+    "    while right < len(string):\n",
+    "        c = string[right]\n",
+    "        if c in temp:\n",
+    "            temp[c] -= 1\n",
+    "            if temp[c] == 0:\n",
+    "                uniqueChar -= 1\n",
+    "        while uniqueChar == 0:\n",
+    "            c = string[left]\n",
+    "            if c in temp:\n",
+    "                temp[c] += 1\n",
+    "                if temp[c] == 1:\n",
+    "                    uniqueChar += 1\n",
+    "            \n",
+    "            if right-left+1 == len(pattern):\n",
+    "                count += 1\n",
+    "            left += 1\n",
+    "        \n",
+    "        right += 1\n",
+    "    return count"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "8"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string = \"aaabaabacbbaaabaa\"\n",
+    "pattern = \"aaba\"\n",
+    "occurenceOfAnagram1(string, pattern)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
