--- a/Python/SlidingWindow/Maximum Sum of window of size K.ipynb
+++ b/Python/SlidingWindow/Maximum Sum of window of size K.ipynb
@@ -62,6 +62,50 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def maxSumSubseq1(array, k):\n",
+    "    total = 0\n",
+    "    total = sum(array[:k])\n",
+    "    \n",
+    "    result = total\n",
+    "    \n",
+    "    left = 0\n",
+    "    right = k\n",
+    "    while right < len(array):\n",
+    "        total += array[right]- array[left]\n",
+    "        result = max(result, total)\n",
+    "        right += 1\n",
+    "        left += 1\n",
+    "    return result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "array = [2,5,1,8,2,9,1] \n",
+    "k = 3\n",
+    "maxSumSubseq1(array, k)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
