BinaryTree-Max Path Sum at any continuous path in a binary tree

--- a/Python/BinaryTree/MaxPathSum.ipynb
+++ b/Python/BinaryTree/MaxPathSum.ipynb
@@ -5,12 +5,26 @@
    "metadata": {},
    "source": [
     "## Problem\n",
+    "\n",
+    "Write a function that takes in a Binary Tree and returns its max path sum. A path is a collection of connected nodes in a tree, where no node is connected to more than two other nodes; a path sum is the sum of the values of the nodes in a particular path. Each BinaryTree node has an integer value , a left child node, and a right child node. Children nodes can either be BinaryTree nodes themselves or None / null .\n",
+    "\n",
     "Calculate the maximum sum in one continuous path from a given tree. Values in tree can be negative.\n",
     "Path can be:\n",
     "1. Max sum in Left branch\n",
     "2. Max sum in RIght branch\n",
     "3. Max sum  = max sum in left + max sum in right + root value\n",
     "4. Max sum from left or right + root"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Approach:\n",
+    "\n",
+    "At any node, we will have to keep value of maxSumAtNode and maxSum (all branch including node value)\n",
+    "MaxSumAtNode = max(max(leftSubTree, rightSubTree) + node.value, node.value)\n",
+    "maxSum = max(leftSubTreeMaxSum, rightSubTreeMaxSum, max(maxSumAtNode, leftSubTree + rightSubTree + node.value))\n"
    ]
   },
   {
