BinaryTree- Print boundry of binary tree in anticlockwise direction

--- a/Python/BinaryTree/Medium-545. Boundary of Binary Tree.ipynb
+++ b/Python/BinaryTree/Medium-545. Boundary of Binary Tree.ipynb
@@ -69,6 +69,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Approach: \n",
+    "Add left boundary (excluding leaves), add all leaves, add right boundaries (excluding leaves). Right boundaries should first added in the stack and then add in result by popping items, as result should show in anticlockwise. First left, then leave and the right from down to up."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
